--- a/style.css
+++ b/style.css
@@ -439,9 +439,28 @@ html{
 
 /*experimentando*/
 
+.container::-webkit-scrollbar{
+    background-color: rgb(226, 223, 223);
+    border-radius: 20px;
+}
+
+.container::-webkit-scrollbar-track{
+    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1% #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+    border-radius: 3em;
+}
+
+.container::-webkit-scrollbar-thumb{
+    background-image: url('./img/pokebola.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
 
   footer{
-    font-size: 1rem;
+    width: 100%;
+    height: 2rem;
+    font-size: 2rem;
+    background-color: #ee081b;
   }
   /* Pokemon type */
 
