--- a/style.css
+++ b/style.css
@@ -442,18 +442,19 @@ html{
 .container::-webkit-scrollbar{
     background-color: rgb(226, 223, 223);
     border-radius: 20px;
-    height: 25px;
 }
 
-.container::-webkit-scrollbar-track{
+/* .container::-webkit-scrollbar-track{
     background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1% #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
     border-radius: 3em;
-}
+} */
 
 .container::-webkit-scrollbar-thumb{
-    background-image: url('./img/pokebola.png');
-    background-size: contain;
-    background-repeat: no-repeat;
+    /* background-image: url('./img/pokebola.png'); */
+    /* background-size: contain;
+    background-repeat: no-repeat; */
+    /* background-image: linear-gradient(to top, red 0%, black 100%); */
+    background: #cacece;    border-radius: 20px;
 }
 
 
