--- a/style.css
+++ b/style.css
@@ -158,6 +158,14 @@ html{
 #desc{
     color:var(--gray-conatiner-boton);
 }
+.poke-name{
+    text-transform: capitalize;
+}
+
+.pokemon-name{
+    text-transform: capitalize;
+    font-size: 2.3rem;
+}
 
 /* footer{
         width: 100%;
