--- a/style.css
+++ b/style.css
@@ -167,27 +167,8 @@ html{
     font-size: 2.3rem;
 }
 
-/* footer{
-        width: 100%;
-        height: 18vh;
-        display: flex;
-        padding: 2rem 0px 2rem 10px;
-        background-color: var(--red-device);
-        opacity: 0.75;
-} */
-
-.pokebola-conatiner{
-    height: 20%;
-    display: flex;
-    /* background: var(--blue-cool); */
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-}
-
-.pokebola-conatiner .pokebola{
-    
+ .pokebola{
+    margin-bottom: 20px;
 }
 
 .pokebola-conatiner .pokebola{
@@ -309,18 +290,28 @@ html{
     100% { opacity: 1.0; }
   }
 
-.inactive{
-    display: none;
+  /* Pokemon segunda sección */
+  .logo-pokemon{
+    width: 250px;
+    height: 40px;
+    margin: 20px 120px;
+  }
+
+.section-list-pokemon .section-list-buttons{
+    margin: 20px 30px;
+    padding: 0px 97px;
 }
 
-.active{
-    display: flex;
+.section-list-buttons button{
+    border: none;
+    background: #ffffff;
 }
 
-.pokebola-close:hover{
-    background: var(--blue-cool);
-    border-radius: 50%;
+.fa-circle-arrow-left,
+.fa-circle-arrow-right{
+    font-size: 3rem;
 }
+
 /*scroll pokemones*/
 #pokemons{
     overflow-x:scroll;
@@ -337,6 +328,7 @@ html{
     justify-content: center;
     align-items: center;
 }
+
 
 /*imagen de la card pokemon*/
 
@@ -439,7 +431,27 @@ html{
     margin: 0 auto;
   }
 
-/* Tapas boton */
+/*scroll*/
+
+.container::-webkit-scrollbar{
+    background-color: rgb(226, 223, 223);
+    border-radius: 20px;
+}
+
+.container::-webkit-scrollbar-thumb{
+    background: #cacece;
+    border-radius: 20px;
+}
+
+
+  footer{
+    width: 100%;
+    height: 2rem;
+    font-size: 2rem;
+    background-color: #ee081b;
+  }
+
+
 
 
 @media screen and (min-width: 768px) {
@@ -461,60 +473,24 @@ html{
 }
 
 
-/*experimentando*/
 
-.container::-webkit-scrollbar{
-    background-color: rgb(226, 223, 223);
-    border-radius: 20px;
+/*experimentos*/
+
+.inactive{
+    display: none;
 }
 
-/* .container::-webkit-scrollbar-track{
-    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1% #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-    border-radius: 3em;
-} */
+.active{
+    display: flex;
+}
 
-.container::-webkit-scrollbar-thumb{
-    /* background-image: url('./img/pokebola.png'); */
-    /* background-size: contain;
-    background-repeat: no-repeat; */
-    /* background-image: linear-gradient(to top, red 0%, white 100%); */
-    background: #cacece;    
-    border-radius: 20px;
+.pokebola-close:hover{
+    background: var(--blue-cool);
+    border-radius: 50%;
 }
 
 
-  footer{
-    width: 100%;
-    height: 2rem;
-    font-size: 2rem;
-    background-color: #ee081b;
-  }
 
 
 
 
-
-
-
-
-  /* Pokemon segunda sección */
-  .logo-pokemon{
-    width: 250px;
-    height: 40px;
-    margin: 20px 120px;
-  }
-
-.section-list-pokemon .section-list-buttons{
-    margin: 20px 30px;
-    padding: 0px 97px;
-}
-
-.section-list-buttons button{
-    border: none;
-    background: #ffffff;
-}
-
-.fa-circle-arrow-left,
-.fa-circle-arrow-right{
-    font-size: 3rem;
-}
